Fix icon alignment in search bar

--- a/src/components/search-bar/SearchBar.scss
+++ b/src/components/search-bar/SearchBar.scss
@@ -1,5 +1,6 @@
 .search-bar {
   display: flex;
+  align-items: center;
   width: 12.5rem;
   border: 1px solid var(--bg-secondary);
   border-radius: var(--border-radius);
